last update for Q1 and results

--- a/Q1.ipynb
+++ b/Q1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6ed727f",
+   "id": "041eb930",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,18 @@
     "import networkx as nx\n",
     "import matplotlib.pyplot as plt\n",
     "from itertools import combinations\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from networkx.algorithms.community import greedy_modularity_communities"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e13cc5cf",
+   "id": "43fb22de",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load data\n",
+    "# ============== Load data ==============\n",
     "scientists_df = pd.read_csv('./output/scientists_cleaned.csv')\n",
     "papers_df = pd.read_csv('./output/papers_cleaned.csv')"
    ]
@@ -29,26 +30,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b02fa353",
+   "id": "60943559",
    "metadata": {
     "lines_to_next_cell": 1
    },
    "outputs": [],
    "source": [
-    "# Normalize names\n",
+    "# ============== Normalize names ==============\n",
     "input_names = set(scientists_df['name'].str.lower().str.strip())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91469b51",
+   "id": "688b06fc",
    "metadata": {
     "lines_to_next_cell": 1
    },
    "outputs": [],
    "source": [
-    "# Filter valid authors in papers\n",
+    "# ============== Filter valid authors in papers ==============\n",
     "def filter_authors(authors):\n",
     "    try:\n",
     "        authors = [a.lower().strip() for a in authors.split(',')]  # Handle comma-separated string\n",
@@ -61,12 +62,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db19e6ad",
+   "id": "fd301f92",
    "metadata": {},
    "outputs": [],
    "source": [
     "papers_df['valid_authors'] = papers_df['Authors'].apply(filter_authors)\n",
-    "# Debug print to see how many valid authors each paper has\n",
     "print(papers_df[['Title', 'valid_authors']].head())\n",
     "papers_df = papers_df[papers_df['valid_authors'].apply(len) >= 2]"
    ]
@@ -74,11 +74,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37c8a159",
+   "id": "5bef8684",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Build graph\n",
+    "# ============== Build graph ==============\n",
     "G = nx.Graph()\n",
     "G.add_nodes_from(input_names)"
    ]
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fe9479a",
+   "id": "f01bcb42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,11 +101,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d558a36e",
+   "id": "a8e40cd3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Network properties\n",
+    "# ============== Network properties ==============\n",
     "print(\"=== Network Properties ===\")\n",
     "print(f\"Total Nodes (in input list): {G.number_of_nodes()}\")\n",
     "print(f\"Total Edges: {G.number_of_edges()}\")\n",
@@ -118,11 +118,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "861cae28",
+   "id": "0fd3553b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Figure 1: Degree Distribution\n",
+    "# ============== Figure 1: Degree Distribution ==============\n",
     "degrees = [deg for node, deg in G.degree()]\n",
     "plt.figure(figsize=(8, 6))\n",
     "plt.hist(degrees, bins=50, color='skyblue', edgecolor='black')\n",
@@ -131,18 +131,18 @@
     "plt.ylabel(\"Frequency\")\n",
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
-    "plt.savefig(\"figure1_degree_distribution.png\")\n",
+    "plt.savefig(\"output/figure1_degree_distribution.png\")\n",
     "plt.close()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26bf4588",
+   "id": "b2f5fa1f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Figure 2: Giant Component\n",
+    "# ============== Figure 2: Giant Component ==============\n",
     "giant_component = max(nx.connected_components(G), key=len)\n",
     "G_giant = G.subgraph(giant_component)"
    ]
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ed30b6e",
+   "id": "6f70b22a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,13 +161,16 @@
     "    print(f\"Diameter: {nx.diameter(G_giant)}\")\n",
     "    print(f\"Average Shortest Path Length: {nx.average_shortest_path_length(G_giant):.2f}\")\n",
     "else:\n",
-    "    print(\"Giant component is not fully connected (unexpected).\")"
+    "    print(\"Giant component is not fully connected (unexpected).\")\n",
+    "# Find isolated nodes (nodes that are not in the giant component)\n",
+    "isolated_nodes = list(set(G.nodes()) - set(giant_component))\n",
+    "print(f\"Number of Isolated Nodes: {len(isolated_nodes)}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f22e671",
+   "id": "39bdbb00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,18 +179,18 @@
     "nx.draw(G_giant, pos, node_size=20, edge_color='gray', node_color='skyblue', with_labels=False)\n",
     "plt.title(f\"Figure 2: Giant Component ({G_giant.number_of_nodes()} nodes, {G_giant.number_of_edges()} edges)\")\n",
     "plt.tight_layout()\n",
-    "plt.savefig(\"figure2_giant_component.png\")\n",
+    "plt.savefig(\"output/figure2_giant_component.png\")\n",
     "plt.close()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5ccae2e",
+   "id": "d968f058",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Figure 3: Largest Clique\n",
+    "# ============== Figure 3: Largest Clique ==============\n",
     "cliques = list(nx.find_cliques(G))\n",
     "largest_clique = max(cliques, key=len)\n",
     "G_clique = G.subgraph(largest_clique)"
@@ -196,27 +199,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a03fea88",
+   "id": "e7a62735",
    "metadata": {},
    "outputs": [],
    "source": [
     "plt.figure(figsize=(8, 6))\n",
-    "pos = nx.circular_layout(G_clique)\n",
+    "pos = nx.spring_layout(G_clique, seed=42)  # Changed layout for better visualization\n",
     "nx.draw(G_clique, pos, with_labels=True, node_color='orange', edge_color='black', node_size=300, font_size=8)\n",
     "plt.title(f\"Figure 3: Largest Clique in the Network (n={len(largest_clique)})\")\n",
     "plt.tight_layout()\n",
-    "plt.savefig(\"figure3_largest_clique.png\")\n",
+    "plt.savefig(\"output/figure3_largest_clique.png\")\n",
     "plt.close()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41a223f8",
+   "id": "f8464d27",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Figure 4: Degree Centrality vs Degree\n",
+    "#============== Figure 4: Degree Centrality vs Degree ==============\n",
     "degree_centrality = nx.degree_centrality(G)\n",
     "degrees_dict = dict(G.degree())\n",
     "x = list(degrees_dict.values())\n",
@@ -226,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34427172",
+   "id": "c593e01f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,18 +240,18 @@
     "plt.ylabel(\"Degree Centrality\")\n",
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
-    "plt.savefig(\"figure4_degree_vs_centrality.png\")\n",
+    "plt.savefig(\"output/figure4_degree_vs_centrality.png\")\n",
     "plt.close()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13538432",
+   "id": "54c8a7e9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Figure 5: Degree Centrality vs Betweenness Centrality\n",
+    "# ============== Figure 5: Degree Centrality vs Betweenness Centrality  ==============\n",
     "betweenness_centrality = nx.betweenness_centrality(G)\n",
     "x = [degree_centrality[node] for node in G.nodes()]\n",
     "y = [betweenness_centrality[node] for node in G.nodes()]"
@@ -257,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a9da19b",
+   "id": "d150b45d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,8 +271,67 @@
     "plt.ylabel(\"Betweenness Centrality\")\n",
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
-    "plt.savefig(\"figure5_degree_vs_betweenness.png\")\n",
+    "plt.savefig(\"output/figure5_degree_vs_betweenness.png\")\n",
     "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca700bde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ============ Top 10 Most Central Scientists  ==============\n",
+    "top_betweenness = sorted(betweenness_centrality.items(), key=lambda x: x[1], reverse=True)[:10]\n",
+    "print(\"\\n=== Top 10 Most Central Scientists (Betweenness Centrality) ===\")\n",
+    "for name, centrality in top_betweenness:\n",
+    "    print(f\"{name.title()}: {centrality:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d052b0f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ============ Figure 6 Ego Network ==============\n",
+    "central_person = max(betweenness_centrality, key=betweenness_centrality.get)\n",
+    "central_node_degree = G.degree(central_person)\n",
+    "all_node_degrees = dict(G.degree())\n",
+    "ego_network = nx.ego_graph(G, central_person)\n",
+    "ego_network_size = len(ego_network.nodes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72d9282e",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8, 6))\n",
+    "pos_ego = nx.spring_layout(ego_network)\n",
+    "nx.draw(ego_network, pos_ego, with_labels=True, node_color='lightgreen', edge_color='gray', node_size=300, font_size=8)\n",
+    "plt.title(f\"Figure 6: Ego Network of {central_person.title()}\")\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(\"output/figure6_ego_network.png\")\n",
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "381d6c0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"The central node is: {central_person.title()}\")\n",
+    "print(f\"The degree of the central node is: {central_node_degree}\")\n",
+    "print(f\"The number of nodes in the ego network of {central_person.title()} is: {ego_network_size}\")"
    ]
   }
  ],
