--- a/Q2,3/code/Q2Q3.ipynb
+++ b/Q2,3/code/Q2Q3.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -856,10 +856,10 @@
     "\n",
     "# And to load your stats DataFrame:\n",
     "import pandas as pd\n",
-    "stats_df = pd.read_csv(\"2ndyearly_network_stats.csv\", index_col=\"Year\")\n",
+    "real_stats_df = pd.read_csv(\"2ndyearly_network_stats.csv\", index_col=\"Year\")\n",
     "\n",
     "real_G.number_of_nodes(), \"nodes,\", real_G.number_of_edges(), \"edges\"\n",
-    "stats_df"
+    "real_stats_df"
    ]
   },
   {
